@@ -9,7 +9,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclWinThrd.c,v 1.24.2.6 2004/06/22 11:55:36 vasiljevic Exp $
+ * RCS: @(#) $Id: tclWinThrd.c,v 1.24.2.7 2004/07/19 19:23:03 vasiljevic Exp $
  */
 
 #include "tclWinInt.h"
@@ -25,8 +25,9 @@
 
 static CRITICAL_SECTION masterLock;
 static int init = 0;
-#define MASTER_LOCK  EnterCriticalSection(&masterLock)
-#define MASTER_UNLOCK  LeaveCriticalSection(&masterLock)
+#define MASTER_LOCK TclpMasterLock() 
+#define MASTER_UNLOCK TclpMasterUnlock() 
+
 
 /*
  * This is the master lock used to serialize initialization and finalization
@@ -427,13 +428,14 @@ TclFinalizeLock ()
 {
     MASTER_LOCK;
     DeleteCriticalSection(&joinLock);
+    /* Destroy the critical section that we are holding! */
     DeleteCriticalSection(&masterLock);
     init = 0;
 #ifdef TCL_THREADS
     DeleteCriticalSection(&allocLock);
     allocOnce = 0;
 #endif
-    /* Destroy the critical section that we are holding. */
+    /* Destroy the critical section that we are holding! */
     DeleteCriticalSection(&initLock);
 }
 
